tests/spec/emit/snapshots/tuple_access.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() {
    let tuple = (42, "hello");
    tuple.0
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	tuple := lisette.MakeTuple2[int, string](42, "hello")
	_ = tuple.First
}
