tests/spec/emit/snapshots/tuple_access_both_elements.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    let tuple = (42, "hello");
    tuple.0 + 1
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	tuple := lisette.MakeTuple2[int, string](42, "hello")
	return tuple.First + 1
}
