tests/spec/emit/snapshots/tuple_destructuring.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test() -> int {
    let pair = (10, 20);
    let (a, b) = pair;
    a + b
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	pair := lisette.MakeTuple2[int, int](10, 20)
	a := pair.First
	b := pair.Second
	return a + b
}
