tests/spec/emit/snapshots/tuple_display_format.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let t = (1, "hello")
    fmt.Println(t)
    fmt.Println(f"tuple: {t}")
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	t := lisette.MakeTuple2[int, string](1, "hello")
	fmt.Println(t)
	fmt.Printf("tuple: %v\n", t)
}
